@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/pets.c, server/player.c, server/plugins.c: Fix some minor issues (such as
+  using 0 instead of NULL [leading to more confusing code], using snprintf with
+  no format arguments [use strncpy instead], using int instead of tag_t [which
+  is typedefed to unsigned int]).
+Arvid Norlander 2009-02-06
+
 socket/info.c, server/alchemy.c, server/gods.c: Fix some minor issues (using 0
   instead of NULL [leading to confusing code], casting const char* to char*).
 Arvid Norlander 2009-02-06
